Horizontal Tabs: Correct bottom alignment ordering

--- a/widgets/tabs/styles/default.less
+++ b/widgets/tabs/styles/default.less
@@ -52,7 +52,8 @@
 			}
 			& when ( @tabs_container_tabs_align = bottom ) {
 				display: flex;
-			    flex-direction: column-reverse;
+			    flex-direction: column;
+				justify-content: flex-end;
 			}
 		}
 
